--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Qualis Eventos e Revistas - Design</title>
+    <title>Periódicos de Design e Áreas Correlatas</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Qualis Design</h1>
+        <h1>Periódicos de Design e Áreas Correlatas</h1>
         <input type="text" id="searchInput" placeholder="Buscar...">
        
         <div class="tab-content active" id="tab1">
@@ -29,7 +29,7 @@
         <div class="tab-content" id="tab2">
             <!-- Conteúdo da Tab 2 -->
         </div>
-      
+      <h2>Dados baseados na tabela da CAPES 2020</h2>
     </div>
     <script src="js/busca.js"></script>
 </body>
