--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Periódicos de Design e Áreas Correlatas</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -26,9 +25,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="tab-content" id="tab2">
-            <!-- Conteúdo da Tab 2 -->
-        </div>
+       
       <h2>Dados baseados na tabela da CAPES 2020</h2>
     </div>
     <script src="js/busca.js"></script>
